# AutoAgents-Python

./: LICENSE  MONOREPO.md  README-CN.md  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
libs/cua/: .gitignore  README.md  pyproject.toml
libs/cua/playground/browser/: test_page_extractor.py  test_shadow_dom_parser.py
libs/cua/playground/prebuilt/: test_react_agent.py  test_reddit.py
libs/cua/src/autoagents_cua/agent/: browser_agent.py  mobile_agent.py
libs/cua/src/autoagents_cua/client/: chat_client.py
libs/cua/src/autoagents_cua/models/: __init__.py  stage.py
libs/cua/src/autoagents_cua/node/: __init__.py  clarify_node.py  execute_node.py  plan_node.py
libs/cua/src/autoagents_cua/prebuilt/: tiktok_manager.py
libs/cua/src/autoagents_cua/prompts/: __init__.py
libs/cua/src/autoagents_cua/prompts/clarify/: generate_question.md  is_query_clear.md
libs/cua/src/autoagents_cua/tools/: __init__.py  search_tools.py
libs/cua/src/autoagents_cua/utils/: __init__.py  logging.py
libs/graph/: README-CN.md  README.md
playground/agent/: test_browser_agent.py
playground/agentify/: test_update.py
playground/browser/: test_captcha_solver.py  test_fingerprint.py  test_highlight.py  test_web_operator.py
playground/mobile/: test_tiktok.py
playground/prebuilt/: test_login_agent.py  test_pubmed_demo.py
playground/slide/input/: test_template_wo_order_info.pptx
playground/slide/output/: test_pptx2pptx_with_order_info.pptx
playground/tools/: test_custom_tools.py
src/autoagents_cua/: __init__.py
(+29 files in other folders)
