[project]
name = "autoagents-cua"
version = "0.0.7"
description = "SDK for interacting with AutoAgents.ai API"
readme = "README.md"
authors = [
    { name = "Hehua Fan", email = "forhheart5532@gmail.com" },
    { name = "Haolan Yang", email = "returnzero486@gmail.com" },
    { name = "Guoyan Shi", email = "sohyan527@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "DrissionPage==4.1.1.2",
    "langchain==1.0.2",
    "langchain_core==1.0.1",
    "langchain_openai==1.0.1",
    "langgraph==1.0.1",
    "loguru==0.7.3",
    "openai==2.6.1",
    "pydub==0.25.1",
    "python-dotenv==1.2.1",
    "PyYAML==6.0.3",
    "speechrecognition==3.14.3",
    "uiautomator2==3.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autoagents_cua"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"